Bug#36468, "Falcon replication failure, engine reports HA_ERR_END_OF_FILE on slave" - Removed freeActiveBlobs() from StorageInterface::delete_rows(). Replication requires that blob data remain intact until DELETE operations are binlogged.